fast api server --> working

--- a/model/ModelTesting.ipynb
+++ b/model/ModelTesting.ipynb
@@ -584,7 +584,7 @@
     "    # Extract text from the region of interest using pytesseract\n",
     "    roi = inverted_img[y-10:y+h+10, x-10:x+w+10]\n",
     "    roi = cv2.GaussianBlur(roi, (3, 3), 0)\n",
-    "    custom_config_1 = r'-c tessedit_char_whitelist=+-*/=Σ0123456789xyzO --psm 8 --oem 3'\n",
+    "    custom_config_1 = r'-c tessedit_char_whitelist=+-*/=()0123456789xyzO --psm 8 --oem 3'\n",
     "   \n",
     "    text = pytesseract.image_to_string(roi, config=custom_config_1 )\n",
     "    text = text.rstrip('\\n')\n",
