--- a/model/Processing.ipynb
+++ b/model/Processing.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "5307830b",
    "metadata": {},
    "outputs": [],
@@ -96,19 +96,23 @@
     "\n",
     "        # Load the image from the specified path\n",
     "        img = cv2.imread(path)\n",
-    "\n",
-    "        # Convert the image to grayscale\n",
-    "        gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "        blur_img = cv2.GaussianBlur(gray, (3, 3),0)\n",
     "        \n",
-    "        # Apply binary thresholding\n",
-    "        threshold_value = 127 # threshold value to be used\n",
-    "        max_value = 255 # maximum value to be assigned for pixel values above threshold\n",
-    "        threshold_type = cv2.THRESH_BINARY # binary thresholding type\n",
-    "        _, binary = cv2.threshold(gray, threshold_value, max_value, threshold_type)\n",
+    "        # Check if the image was successfully loaded\n",
+    "        if img is not None:\n",
+    "            # Convert the image to grayscale\n",
+    "            gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "            blur_img = cv2.GaussianBlur(gray, (3, 3),0)\n",
     "\n",
-    "        # Invert the image\n",
-    "        inverted_img = cv2.bitwise_not(binary)\n",
+    "            # Apply binary thresholding\n",
+    "            threshold_value = 127 # threshold value to be used\n",
+    "            max_value = 255 # maximum value to be assigned for pixel values above threshold\n",
+    "            threshold_type = cv2.THRESH_BINARY # binary thresholding type\n",
+    "            _, binary = cv2.threshold(gray, threshold_value, max_value, threshold_type)\n",
+    "\n",
+    "            # Invert the image\n",
+    "            inverted_img = cv2.bitwise_not(binary)\n",
+    "        else:\n",
+    "            print(\"Failed to load image.\")\n",
     "\n",
     "        # Return the preprocessed and inverted image\n",
     "        return inverted_img"
@@ -124,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "b7307508",
    "metadata": {},
    "outputs": [],
@@ -157,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "73ca55c7",
    "metadata": {},
    "outputs": [],
@@ -190,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "24b79a72",
    "metadata": {},
    "outputs": [],
@@ -262,7 +266,7 @@
     "\n",
     "        # Extract text from the region of interest using pytesseract\n",
     "        roi = inverted_img[y-10:y+h+10, x-10:x+w+10]\n",
-    "        custom_config_1 = r'-c tessedit_char_whitelist=+-*/=Σ0123456789xyzO --psm 8 --oem 3'\n",
+    "        custom_config_1 = r'-c tessedit_char_whitelist=+-*/=()0123456789xyzO --psm 8 --oem 3'\n",
     "\n",
     "        text = pytesseract.image_to_string(roi, config=custom_config_1 )\n",
     "        text = text.rstrip('\\n')\n",
@@ -283,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "id": "3f277c5a",
    "metadata": {},
    "outputs": [],
@@ -303,11 +307,12 @@
     "    for i in range(len(tuple_list)):\n",
     "        if i==0:\n",
     "            equation += tuple_list[i][0]\n",
-    "        # Step 2a: If the element is an exponent, append the element followed by \"**\" to equation\n",
+    "        # Step 2a: If the element is an exponent, append the \"**\" before an element to equation\n",
     "        elif tuple_list[i][1]:\n",
     "            equation += \"**\" + tuple_list[i][0]\n",
+    "            \n",
     "        # Step 2b: Otherwise, just append the element to equation\n",
-    "        elif tuple_list[i-1][0].isdigit() and tuple_list[i][0].isalpha() and i!=0:\n",
+    "        elif tuple_list[i-1][0].isdigit() and (tuple_list[i][0].isalpha() or tuple_list[i][0] == '(')  and i!=0:\n",
     "            equation += \"*\" + tuple_list[i][0]  \n",
     "        else: \n",
     "            equation += tuple_list[i][0]\n",
@@ -317,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "24e29311",
    "metadata": {},
    "outputs": [],
@@ -346,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "86f2146f",
    "metadata": {},
    "outputs": [],
@@ -379,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "a3de38bf",
    "metadata": {},
    "outputs": [],
@@ -389,7 +394,7 @@
     "    inverted_img = load_and_preprocess_img(path)\n",
     "    \n",
     "    eq_rep = OCR_and_exponent(inverted_img)\n",
-    "    \n",
+    "   \n",
     "    equation = rewritting_equation(eq_rep)\n",
     "    \n",
     "    if '=' in equation:\n",
@@ -398,7 +403,6 @@
     "        \n",
     "    if is_polynomial(equation):\n",
     "        equation_sym, symbols = sympy_symbol(equation)\n",
-    "        print(equation_sym)\n",
     "        \n",
     "        solutions = []\n",
     "        for var, symbol in symbols.items():\n",
@@ -415,25 +419,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "995de2bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x**3-5*x**2-8*x+12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "solution = process_n_calc('D:\\\\FormulaDecoder\\\\sample_pics\\\\12.png')"
+    "solution = process_n_calc('D:\\\\FormulaDecoder\\\\model\\\\sample_pics\\\\12.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "id": "1c5beeff",
    "metadata": {},
    "outputs": [
@@ -441,13 +437,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-2, 1, 6]]\n"
+      "<class 'list'>\n"
      ]
     }
    ],
    "source": [
-    "print(solution)"
+    "print(type(solution))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d359f7b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution = process_n_calc('D:\\\\FormulaDecoder\\\\model\\\\sample_pics\\\\13.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1546a0ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(solution))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c04546bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution = process_n_calc('D:\\\\FormulaDecoder\\\\model\\\\sample_pics\\\\1.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6e67dbe6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(solution))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cc97496",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
